added hbase enviroment variables